Refactoring: Remove less, using node.js to compile less

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
 # ignore js files in model -> will be generated from ts files
 Model/*.js
 Application/*.js
+Configuration/*.js
 Service/*.js
 Main.js
 rasterVorlage.html
 rasterVorlage.odg
-
+Resources/Styles/styles.css
 
 # temporary files
 *~
