--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-	"name": "Photobook Designer",
-	"version": "0.1",
+	"name": "Photobook designer",
+	"version": "0.2",
 	"description": "Design and print a photobook",
 	"launch_path": "index.html",
 	"icons": {
@@ -8,8 +8,8 @@
 		"128": "/Resources/Img/appIcon-128.png"
 	},
 	"developer": {
-		"name": "Tobias Blaser",
-		"url": "http://www.colvarim.ch"
+		"name": "moonline",
+		"url": "https://github.com/moonline/Photobook"
 	},
 	"default_locale": "en"
 }
