Move frontend app

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,17 @@
 # ignore js files in model -> will be generated from ts files
-Model/*.js
-Application/*.js
-Service/*.js
-Main.js
+*/Model/*.js
+*/Application/*.js
+*/Service/*.js
+*/Main.js
 rasterVorlage.html
 rasterVorlage.odg
-Resources/Styles/styles.css
+*/Resources/Styles/styles.css
+
+# documentation
+issues.rst
+
+# node
+node_modules
 
 # temporary files
 *~
@@ -45,6 +51,3 @@ Resources/Styles/styles.css
 /.idea/
 .settings
 .project
-
-# documentation
-issues.rst
