--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # ignore js files in model -> will be generated from ts files
+*.js
 */Model/*.js
 */Application/*.js
 */Service/*.js
@@ -18,6 +19,7 @@ node_modules
 *.swp
 *.*-swp
 *.tmp.*
+cache
 
 # ignore files
 *.ign.*
