--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "body-parser": "~1.14.2",
     "path": "~0.12.7",
     "fs": "0.0.2",
-    "tsconfig": "~2.2.0"
+    "tsconfig": "~2.2.0",
+    "easyimage": "~2.1.0",
+    "mime": "~1.3.4"
   }
 }
