--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "fs": "0.0.2",
     "tsconfig": "~2.2.0",
     "easyimage": "~2.1.0",
-    "mime": "~1.3.4"
+    "mime": "~1.3.4",
+    "image-size": "~0.4.0"
   }
 }
