Move code to TS and app to Electron

--- a/book-renderer/.gitignore
+++ b/book-renderer/.gitignore
@@ -1,12 +1,7 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 
-# testing
-/coverage
-
-# production
+# compiled code
 /build
 
 # misc
@@ -15,6 +10,3 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# compilation
-src/**/*.css
