--- a/book-renderer/package.json
+++ b/book-renderer/package.json
@@ -6,17 +6,22 @@
   "dependencies": {
     "electron": "1.7.10",
     "electron-reload": "^1.2.2",
+    "fs": "0.0.1-security",
+    "path": "^0.12.7",
+    "prop-types": "^15.6.0",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
     "react-draggable": "^2.2.3"
   },
   "devDependencies": {
+    "@types/prop-types": "^15.5.2",
     "@types/react": "^16.0.34",
     "@types/react-dom": "^16.0.3",
     "css-loader": "^0.28.8",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.7.2",
     "npm-run-all": "^4.1.2",
+    "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
     "ts-loader": "^3.2.0",
@@ -24,8 +29,10 @@
     "webpack": "^3.10.0"
   },
   "scripts": {
-    "start": "npm-run-all --parallel build:watch start:app",
-    "start:app": "electron .",
+    "clean": "rimraf build",
+    "start": "npm-run-all clean start:watch",
+    "start:watch": "npm-run-all --parallel build:watch start:app",
+    "start:app": "electron . --allow-file-access-from-files",
     "build": "npm run build:watch",
     "build:app": "webpack",
     "build:watch": "webpack --watch"
