Complete photobook rendering and add open handling

--- a/book-renderer/tsconfig.json
+++ b/book-renderer/tsconfig.json
@@ -5,6 +5,7 @@
     "moduleResolution": "node",
     "noResolve": false,
     "noImplicitAny": false,
+    "strictNullChecks": false,
     "sourceMap": true,
     "allowJs": true,
     "jsx": "react"
