--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 */Main.js
 rasterVorlage.html
 rasterVorlage.odg
-*/Resources/Styles/styles.css
+*/**/Resources/Styles/styles.css
 
 # documentation
 issues.rst
