--- a/app/package.json
+++ b/app/package.json
@@ -6,33 +6,32 @@
   "dependencies": {
     "check-prop-types": "^1.1.2",
     "electron": "1.7.10",
-    "electron-reload": "^1.2.2",
+    "electron-reload": "^1.2.5",
     "fs": "0.0.1-security",
-    "mobx": "^3.6.1",
+    "mobx": "^3.6.2",
     "mobx-react": "^4.4.3",
     "path": "^0.12.7",
-    "prop-types": "^15.6.0",
+    "prop-types": "^15.6.2",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
-    "react-draggable": "^2.2.3",
-    "typescript": "^2.7.2"
+    "react-draggable": "^2.2.3"
   },
   "devDependencies": {
-    "@types/prop-types": "^15.5.2",
-    "@types/react": "^16.0.34",
-    "@types/react-dom": "^16.0.3",
-    "css-loader": "^0.28.8",
+    "@types/prop-types": "^15.5.5",
+    "@types/react": "^16.4.13",
+    "@types/react-dom": "^16.0.7",
+    "css-loader": "^0.28.11",
     "html-webpack-plugin": "^2.30.1",
-    "node-sass": "^4.7.2",
-    "npm-run-all": "^4.1.2",
+    "node-sass": "^4.9.3",
+    "npm-run-all": "^4.1.3",
     "rimraf": "^2.6.2",
-    "sass-loader": "^6.0.6",
+    "sass-loader": "^6.0.7",
     "style-loader": "^0.19.1",
-    "ts-loader": "^3.2.0",
-    "tslint": "^5.10.0",
+    "ts-loader": "^3.5.0",
+    "tslint": "^5.11.0",
     "tslint-react": "^3.6.0",
-    "typescript": "^2.6.2",
-    "webpack": "^3.10.0"
+    "typescript": "^2.9.2",
+    "webpack": "^3.12.0"
   },
   "scripts": {
     "clean": "rimraf build",
