--- a/app/package.json
+++ b/app/package.json
@@ -5,37 +5,38 @@
   "main": "main.js",
   "dependencies": {
     "check-prop-types": "^1.1.2",
-    "electron": "1.7.10",
+    "electron": "^2.0.9",
     "electron-reload": "^1.2.5",
     "fs": "0.0.1-security",
-    "mobx": "^3.6.2",
-    "mobx-react": "^4.4.3",
+    "mobx": "^5.1.0",
+    "mobx-react": "^5.2.8",
     "path": "^0.12.7",
     "prop-types": "^15.6.2",
-    "react": "^15.6.2",
-    "react-dom": "^15.6.2",
-    "react-draggable": "^2.2.3"
+    "react": "^16.5.0",
+    "react-dom": "^16.5.0",
+    "react-draggable": "^3.0.5"
   },
   "devDependencies": {
     "@types/prop-types": "^15.5.5",
-    "@types/react": "^16.4.13",
+    "@types/react": "^16.4.14",
     "@types/react-dom": "^16.0.7",
-    "css-loader": "^0.28.11",
-    "html-webpack-plugin": "^2.30.1",
+    "css-loader": "^1.0.0",
+    "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.9.3",
     "npm-run-all": "^4.1.3",
     "rimraf": "^2.6.2",
-    "sass-loader": "^6.0.7",
-    "style-loader": "^0.19.1",
-    "ts-loader": "^3.5.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.0",
+    "ts-loader": "^5.1.0",
     "tslint": "^5.11.0",
     "tslint-react": "^3.6.0",
-    "typescript": "^2.9.2",
-    "webpack": "^3.12.0"
+    "typescript": "^3.0.3",
+    "webpack": "^4.18.0",
+    "webpack-cli": "^3.1.0"
   },
   "scripts": {
     "clean": "rimraf build",
-    "start": "npm-run-all clean start:watch",
+    "start": "npm run clean && npm run build:app && npm-run-all clean start:watch",
     "start:watch": "npm-run-all --parallel build:watch start:app",
     "start:app": "electron . --allow-file-access-from-files",
     "build": "npm run build:watch",
