--- a/photobook-editor/package.json
+++ b/photobook-editor/package.json
@@ -13,31 +13,37 @@
     "build-styles": "lessc ./src/Resources/Styles/styles.less ./src/Resources/Styles/styles.css",
     "build-server": "tsc ./index.ts",
     "build-app": "tsc --target ES5 ./src/Main.ts --module amd --out ./src/Main.js",
+    "clean-dist": "rm -rf dist && rm photobook-editor*.tgz",
+    "pack": "yarn clean-dist && electron-builder --dir",
+    "dist": "yarn clean-dist && electron-builder",
     "postinstall": "electron-builder install-app-deps"
   },
   "build": {
     "appId": "photobook-editor",
     "mac": {
-      "category": "work"
+      "category": "Photography"
+    },
+    "linux": {
+      "category": "Photography"
     }
   },
   "dependencies": {
     "body-parser": "~1.14.2",
     "easyimage": "~2.1.0",
-    "electron": "^16.0.5",
-    "electron-builder": "^22.14.5",
     "express": "~4.13.3",
     "fs": "0.0.2",
     "image-size": "~0.4.0",
     "mime": "~1.3.4",
-    "path": "~0.12.7",
-    "tsconfig": "~2.2.0"
+    "path": "~0.12.7"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.13",
     "@types/mime": "^2.0.3",
+    "electron": "^16.0.5",
+    "electron-builder": "^22.14.5",
     "less": "^4.1.2",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "tsconfig": "~2.2.0"
   }
 }
