--- a/photobook-editor/package.json
+++ b/photobook-editor/package.json
@@ -11,7 +11,7 @@
     "start": "electron index.js",
     "build": "yarn build-styles && yarn build-server && yarn build-app",
     "build-styles": "lessc ./src/Resources/Styles/styles.less ./src/Resources/Styles/styles.css",
-    "build-server": "tsc ./index.ts",
+    "build-server": "tsc ./index.ts ./preload.ts",
     "build-app": "tsc --target ES5 ./src/Main.ts --module amd --out ./src/Main.js",
     "clean-dist": "rm -rf dist && rm photobook-editor*.tgz",
     "pack": "yarn clean-dist && electron-builder --dir",
@@ -43,7 +43,7 @@
     "electron": "^16.0.5",
     "electron-builder": "^22.14.5",
     "less": "^4.1.2",
-    "typescript": "^4.5.4",
-    "tsconfig": "~2.2.0"
+    "tsconfig": "~2.2.0",
+    "typescript": "^4.5.4"
   }
 }
