--- a/photobook-editor/package.json
+++ b/photobook-editor/package.json
@@ -34,6 +34,7 @@
     "fs": "0.0.2",
     "image-size": "~0.4.0",
     "mime": "~1.3.4",
+    "open": "^8.4.0",
     "path": "~0.12.7"
   },
   "devDependencies": {
