--- a/photobook-editor/package.json
+++ b/photobook-editor/package.json
@@ -1,6 +1,6 @@
 {
   "name": "photobook-editor",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A simple photobook application build of web technology",
   "repository": "https://github.com/moonline/Photobook",
   "author": "Moonline <moonline@users.noreply.github.com>",
@@ -31,11 +31,9 @@
     "body-parser": "~1.14.2",
     "easyimage": "~2.1.0",
     "express": "~4.13.3",
-    "fs": "0.0.2",
     "image-size": "~0.4.0",
     "mime": "~1.3.4",
-    "open": "^8.4.0",
-    "path": "~0.12.7"
+    "open": "^8.4.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
